--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,7 +10,7 @@ License: CC0
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
-Imports: dplyr
+Imports: dplyr, assertthat
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
